sophons/apps/monitoring/tempo/prefixed/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/nlamirault/schema-hub/main/schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: health
  namespace: monitoring-system
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - health.sphns.run

  rules:
    - matches:
        - path:
            type: Exact
            value: /tempo-temporium
          method: HEAD
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /ready
      backendRefs:
        - name: tempo-temporium
          port: 3200
